crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@276.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_mul VALUES (6,3,'-2830400711649493468815157129316992649.40542786074520931471973065281957756940496588853021620372179463538053123396140685749478530925306163968207226329985017644835203709485594362663495728106061878665324856417118064730721101615473194292620972173690618491026470353143141125614124440035267592258385099934706896692953497971326605145704135723011753705907329979207428661473172503098296622281647255008204864404416199384701720347319806375450632245634238172654086373193251877533131784268854289406126119630708578053354762596511353053106459297339360827562281168219966099848212');"
---
InsertStmt@0..603
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_mul"
  Whitespace@23..24 " "
  SelectStmt@24..601
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..601
      AConst@32..33
        Iconst@32..33 "6"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "3"
      Ascii44@35..36 ","
      AConst@36..601
        Sconst@36..601 "'-2830400711649493468 ..."
  Ascii41@601..602 ")"
  Ascii59@602..603 ";"

